
Changelog
=========

1.0.2 (unreleased)
------------------

- Adds month/year filter to the export. Fixes #101.
  [href]

- Replaces the export list view with a form where the export type, format and
  other options can be chosen.
  [href]

- Improves print style for single reservation view. Fixes #109.
  [href]

- Adds seantis.reservation specific browserlayer.
  [href]

- Adds xlsx as output format to exports.
  [href]

- Adds option to define one global manager email address. Fixes #69.
  [href]

- Start treating sqlalchemy warnings during tests as errors.
  [href]

- Adds a link to the reservation to the manager email. Fixes #117.
  [href]

- Adds the reservation quota to the reservation confirmation mail. Fixes #111.
  [href]

- No longer send reservee emails to the resrevation manager. Fixes #118.
  [href]

- Richtextfields may now be exported to excel/csv/json. HTML is converted into
  text when this is done.
  [href]

- Dates in the excel/csv/json export are now uniformly exported in ISO8601.
  Fixes #116.
  [href]

- Reservation data is now stored more transparently. This has no effect
  for users, but it ensures better data integrity in the future. Fixes #119.
  [href]

- Integrates seantis.plonetools.
  [href]

- Make sure that the exposure checking method doesn't trip up if the resource
  may not be viewed and is therefore None. Fixes #114.
  [href]

1.0.18 (2014-01-21)
-------------------

- No longer throws an exception if the allocation cannot be found. Returns
  a 404 instead. Fixes #112.
  [href]

1.0.17
------

- The print link is now shown in the monthly_report. Fixes #33.
  [href]

- Custom e-mail templates now show a translated template upon creation, if the
  translation is available. Fixes #92.
  [href]

- Adds quota to email templates. Closes #41.
  [href]

- Clarify the received reservations email helptext, ensuring that it's clear
  that this mail is sent in all cases. Closes #95.
  [href]
